dig-src/main/default/objects/Comms_Message__c/Comms_Message__c.object-meta.xml
<CustomObject>
    <label>Comms Message</label>
    <nameField>
        <displayFormat>MSG-{0000000}</displayFormat>
        <label>Message Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comms Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>