dig-src/main/default/objects/Comms_Message__c/fields/Body_Text__c.field-meta.xml
<CustomField>
    <fullName>Body_Text__c</fullName>
    <label>Body (Text)</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>