dig-src/main/default/objects/Comms_Message__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Comms Messages</relationshipLabel>
    <relationshipName>Comms_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>