dig-src/main/default/objects/Comms_Message__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Comms Messages</relationshipLabel>
    <relationshipName>Comms_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>