dig-src/main/default/objects/Comms_Message__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <label>Error</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>