dig-src/main/default/objects/Comms_Message__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <label>External Id</label>
    <type>Text</type>
    <length>255</length>
</CustomField>