dig-src/main/default/objects/Comms_Message__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <label>From</label>
    <type>Email</type>
</CustomField>