dig-src/main/default/objects/Comms_Message__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <label>To</label>
    <type>Email</type>
</CustomField>